--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native": "^0.66.3",
+    "react-native-web": "^0.17.5",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
-    "react-router-dom": "^4.3.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^1.1.2"
