--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^4.3.1",
     "react-scripts": "4.0.3",
+    "react-social-icons": "^5.6.1",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
