--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,14 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-loading": "^2.0.3",
     "react-native": "^0.66.3",
     "react-native-web": "^0.17.5",
-    "react-loading": "^2.0.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^4.3.1",
     "react-scripts": "4.0.3",
     "react-social-icons": "^5.6.1",
+    "react-textarea-autosize": "^8.3.3",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
